# stupid-farfetch-bot

./: Cargo.toml  README.md
src/: country.rs  error.rs  main.rs  model.rs  monitor.rs  task.rs
