[package]
name = "emilio-pucci"
version = "0.1.0"
authors = ["Hasan Gondal <hasan@afraidlabs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
url = "2.2.2"
log = "0.4.14"
futures = "0.3.15"
thiserror = "1.0.25"
serde_json = "1.0.64"
pretty_env_logger = "0.4.0"

[dependencies.rand]
version = "0.8.3"
features = ["small_rng"]

[dependencies.reqwest]
default-features = false
version = "0.11.3"
features = ["cookies", "gzip", "json", "rustls-tls"]

[dependencies.serde]
version = "1.0.126"
features = ["derive"]

[dependencies.strum]
version = "0.21.0"
features = ["derive"]

[dependencies.tokio]
version = "1.6.1"
features = ["full"]
